output/SMT/o3-mini-2025-01-31/trip/output/trip_planning_example_1434.out
  File "/home/hz466/calendar-planning/source/../output/SMT/o3-mini-2025-01-31/trip/code/trip_planning_example_1434.py", line 181
    /* pos[i-1] == 9 */ durations[9] - 1))))))　)
                                              ^
SyntaxError: invalid non-printable character U+3000
